src/navigation/verse-selector.scss
.verse-selector {
    display: none;
    position: absolute;
    height: 250px;
    background: white;
    border: 1px solid black;
    border-top: none;
    left: 50%;
    transform: translateX(-50%);

    &.show-popup {
        display: flex;
        flex-direction: row;
    }

    .selector-list {

        .header {
            padding: 10px;
        }

        .link {
            display: block;
            padding: 10px;
            padding-right: 25px;
        }
    }
}

